--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,3 +1,21 @@
+"Mirzasoleiman":
+  - firstname: ["Baharan", "B."]
+    url: https://baharanm.github.io/
+
+"Yang":
+  - firstname: ["Yu", "Y."]
+    url: https://sites.google.com/g.ucla.edu/yuyang/home
+
+"Xue":
+  - firstname: ["Yihao", "Y."]
+    url: https://sites.google.com/g.ucla.edu/yihao-xue/home
+
+"Joshi":
+  - firstname: ["Siddharth", "S."]
+    url: https://sjoshi804.github.io/
+
+
+
 "Adams":
   - firstname: ["Edwin", "E.", "E. P.", "Edwin Plimpton"]
     url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
