--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ email: baharan@cs.ucla.edu
 keywords: machine learning, data selection, optimization #jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: 🌱 # ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://baharanm.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
