--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -2,10 +2,6 @@
   - firstname: ["Baharan", "B."]
     url: https://baharanm.github.io/
 
-"Yang":
-  - firstname: ["Yu", "Y."]
-    url: https://sites.google.com/g.ucla.edu/yuyang/home
-
 "Xue":
   - firstname: ["Yihao", "Y."]
     url: https://sites.google.com/g.ucla.edu/yihao-xue/home
@@ -13,6 +9,14 @@
 "Joshi":
   - firstname: ["Siddharth", "S."]
     url: https://sjoshi804.github.io/
+
+"Yang.":
+  - firstname: ["Wenhan", "W."]
+    url: https://sites.google.com/view/hangeryang/home
+
+"Yang":
+  - firstname: ["Yu", "Y."]
+    url: https://sites.google.com/g.ucla.edu/yuyang/home
 
 
 
