--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title: BigML # the website title (if blank, full name will be used instead)
 first_name: Baharan
 middle_name: 
 last_name: Mirzasoleiman
