--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -18,6 +18,10 @@
   - firstname: ["Yu", "Y."]
     url: https://sites.google.com/g.ucla.edu/yuyang/home
 
+"Nguyen":
+  - firstname: ["Dang", "D."]
+    url: https://hsgser.github.io/
+
 
 
 "Adams":
