--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -12,15 +12,23 @@
 
 "Yang.":
   - firstname: ["Wenhan", "W."]
-    url: https://sites.google.com/view/hangeryang/home
+    url: https://sites.google.com/g.ucla.edu/wenhan-yang/home
 
 "Yang":
   - firstname: ["Yu", "Y."]
     url: https://sites.google.com/g.ucla.edu/yuyang/home
 
-"Nguyen":
-  - firstname: ["Dang", "D."]
-    url: https://hsgser.github.io/
+"Huang":
+  - firstname: ["Huang", "J."]
+    url: https://jhhuang2021.github.io/
+
+"Jiang":
+  - firstname: ["Jiang", "H."]
+    url: https://redredsheep.github.io/
+
+"Jin":
+  - firstname: ["Jin", "H."]
+    url: https://hjenryin.github.io/homepage/
 
 
 
